Try using getConstructor().getInstance()